src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Open_Opportunities_Value__c</fullName>
        <label>Open Opportunities Value</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Closed Won, Closed Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Open_Opportunities__c</fullName>
        <label>Open Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Closed Won, Closed Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rating_Indicator__c</fullName>
        <formula>IMAGE( IF( AnnualRevenue&gt;50000000,&quot;/resource/Stars/star5.png&quot;, IF(AnnualRevenue&gt;25000000, &quot;/resource/Stars/star3.5.png&quot;,&quot;/resource/Stars/star2.png&quot;)),&quot;Rating&quot;,20,100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating Indicator</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Rating_Indicator__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>FinServ__My_Businesses</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.FinServ__IndustriesBusiness</value>
        </filters>
        <label>My Businesses</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FinServ__My_Clients</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>FinServ__TotalFinancialAccounts__c</columns>
        <columns>FinServ__AUM__c</columns>
        <columns>FinServ__WalletShare__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.FinServ__IndustriesIndividual</value>
        </filters>
        <filters>
            <field>FinServ__IndividualType__c</field>
            <operation>equals</operation>
            <value>Individual</value>
        </filters>
        <label>My Clients</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FinServ__My_Groups</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>FinServ__TotalFinancialAccounts__c</columns>
        <columns>FinServ__AUM__c</columns>
        <columns>FinServ__WalletShare__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.FinServ__IndustriesHousehold</value>
        </filters>
        <filters>
            <field>FinServ__IndividualType__c</field>
            <operation>equals</operation>
            <value>Group</value>
        </filters>
        <label>My Groups</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FinServ__My_Institutions</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>FinServ__ClientCategory__c</columns>
        <columns>FinServ__TotalFinancialAccounts__c</columns>
        <columns>FinServ__AUM__c</columns>
        <columns>FinServ__WalletShare__c</columns>
        <columns>FinServ__LastInteraction__c</columns>
        <columns>FinServ__NextInteraction__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.FinServ__IndustriesInstitution</value>
        </filters>
        <label>My Institutions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FinServ__My_Retail_Clients</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>FinServ__ClientCategory__c</columns>
        <columns>FinServ__TotalFinancialAccounts__c</columns>
        <columns>FinServ__AUM__c</columns>
        <columns>FinServ__WalletShare__c</columns>
        <columns>FinServ__LastInteraction__c</columns>
        <columns>FinServ__NextInteraction__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.FinServ__IndustriesIndividual</value>
        </filters>
        <label>My Retail Clients</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Rating_Indicator__c</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Company</fullName>
        <active>true</active>
        <description>A company we do business with</description>
        <label>Company</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__IndustriesBusiness</fullName>
        <active>true</active>
        <description>A business or an organization</description>
        <label>Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__IndustriesHousehold</fullName>
        <active>true</active>
        <description>A grouping of related people and institutions</description>
        <label>Household</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__IndustriesIndividual</fullName>
        <active>true</active>
        <description>A person who is a prospect or a client</description>
        <label>Individual</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__IndustriesInstitution</fullName>
        <active>true</active>
        <description>An institution that is a prospect or a client</description>
        <label>Institution</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FinServ__NonPortalUserReferrer</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
                NOT(ISBLANK(FinServ__ReferredByUser__c)),
                NOT(ISPICKVAL(FinServ__ReferredByUser__r.UserType, &apos;Standard&apos;))
            )</errorConditionFormula>
        <errorDisplayField>FinServ__ReferredByUser__c</errorDisplayField>
        <errorMessage>Internal referrers must be internal Salesforce users.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__NotAllowingConversionFromIndividual</fullName>
        <active>false</active>
        <errorConditionFormula>1!=1</errorConditionFormula>
        <errorMessage>The Individual record type can&apos;t be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__NotAllowingConversionToIndividual</fullName>
        <active>false</active>
        <description>Not allowing changing the record type of &quot;non-Individual&quot; to &quot;Individual&quot; record type</description>
        <errorConditionFormula>1!=1</errorConditionFormula>
        <errorMessage>The record type can&apos;t be changed to Individual.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__SingleReferredByEntryByRecord</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
                ISBLANK(FinServ__ConversionDateTime__c), 
                AND( 
                    NOT(ISBLANK(FinServ__ReferredByUser__c)), 
                    NOT(ISBLANK(FinServ__ReferredByContact__c)) 
                ) 
            )</errorConditionFormula>
        <errorDisplayField>FinServ__ReferredByContact__c</errorDisplayField>
        <errorMessage>Enter an internal referrer or an external referrer. You can list only one referrer for each referral.</errorMessage>
    </validationRules>
</CustomObject>